--- a/public/stylesheets/manage_style.css
+++ b/public/stylesheets/manage_style.css
@@ -441,3 +441,139 @@ form {
   color: #b2b2b2;
   padding: 10px;
 }
+
+/* 댓글 */
+.manage_comments_inner {
+  margin: 0 0 50px 0;
+  background: white;
+}
+
+.manage_comments_inner .comments_cont {
+  display: table-cell;
+}
+
+.manage_comments_inner .comments_btn {
+  display: table-cell;
+  width: 325px;
+  vertical-align: middle;
+}
+
+.manage_comments_inner ul {
+  border: 1px solid #e0e5ee;
+}
+
+.manage_comments_inner li {
+  display: table;
+  width: 100%;
+  border-bottom: 1px solid #f1f3f6;
+  margin-left: 10px;
+}
+.manage_comments_inner li:last-child {
+  border: 0;
+}
+
+.manage_comments_inner li .name {
+  display: inline-block;
+  color: #ff5544;
+  vertical-align: top;
+  letter-spacing: -0.2px;
+  font-size: 13px;
+}
+
+.manage_comments_inner li .created {
+  display: inline-block;
+  font-size: 12px;
+  color: #959595;
+  margin-left: 30px;
+}
+
+.manage_comments_inner li strong {
+  width: 500px;
+  font-size: 14px;
+  line-height: 22px;
+  overflow: hidden;
+  margin: 3px 0 9px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  font-weight: normal;
+}
+
+.manage_comments_inner li .title {
+  max-width: 500px;
+  overflow: hidden;
+  font-size: 13px;
+  display: inline-block;
+  color: gray;
+}
+
+.comments_btn button {
+  width: 60px;
+  height: 30px;
+  margin-left: 30px;
+  font-size: 12px;
+  border: 1px solid #c5cdd7;
+  background: white;
+  display: none;
+}
+
+.manage_comments_inner li:hover button {
+  display: inline-block;
+}
+/* .manage_comments_inner li .comment {
+} */
+
+.main_ul_recent_post {
+  width: 850px;
+  height: 280px;
+}
+
+.main_ul_recent_post li {
+  float: left;
+  position: relative;
+  width: 206px;
+  height: 258px;
+  margin: 6px 6px 0 0;
+  border: 1px solid #e0e5ee;
+  background: #fff;
+}
+
+.main_ul_recent_post li:last-child {
+  margin-right: 0;
+}
+.main_ul_recent_post li a {
+  display: block;
+  margin: 26px 24px 0;
+  text-decoration: none;
+}
+
+.main_ul_recent_post li a:hover strong {
+  text-decoration: underline;
+}
+
+.main_ul_recent_post li a strong {
+  max-height: 60px;
+  margin-bottom: 12px;
+  line-height: 20px;
+  font-weight: normal;
+  font-size: 14px;
+  -webkit-line-clamp: 3;
+  text-indent: 0;
+  background: none;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
+
+.main_ul_recent_post li a p {
+  max-height: 90px;
+  font-size: 12px;
+  line-height: 18px;
+  color: #808080;
+  -webkit-line-clamp: 5;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  word-break: break-all;
+}
